# trapsense_AI

./: README.md
backend/: .gitignore  pyproject.toml  server.py  test.db
backend/src/: app.py
backend/src/database/: db.py  models.py
backend/src/routes/: alerts.py  media.py  predictions.py  routes.py  users.py
backend/src/services/: ml.py  s3.py  worker.py
backend/src/utils/: utils.py
frontend/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderPage.jsx
frontend/src/components/: BackgroundPaths.jsx  InfiniteSlider.jsx
frontend/src/components/common/: AnimalCount.jsx  Button.jsx  ExportNonBlank.jsx  FolderBrowser.jsx  FolderComponent.jsx  FolderUpload.jsx  HeatmapViwer.jsx  InfiniteSlider.jsx  InteractiveRobotSpline.jsx  Logo.jsx  NavBar.jsx  NonblankStatistics.jsx  PredictionDisplay.jsx  ProgressiveBlur.jsx  VideoBackground.jsx
frontend/src/components/layout/: Header.jsx  Layout.jsx
frontend/src/components/ui/: card.jsx
frontend/src/css/: Home.css  UploadData.css
frontend/src/lib/: utils.js
frontend/src/pages/: Dashboard.jsx  Home.jsx  UploadData.jsx
frontend/src/utils/: api.js
ml/classifier/: best_classification_model.pt
